--- a/toolkit/toolkit.csproj
+++ b/toolkit/toolkit.csproj
@@ -62,6 +62,7 @@
     </Compile>
     <Compile Include="NotificationIcon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WinShellAPI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
