--- a/toolkit/toolkit.csproj
+++ b/toolkit/toolkit.csproj
@@ -62,6 +62,10 @@
     </Compile>
     <Compile Include="NotificationIcon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="sourcesPortable.cs" />
+    <Compile Include="sourcesPortable.Designer.cs">
+      <DependentUpon>sourcesPortable.cs</DependentUpon>
+    </Compile>
     <Compile Include="WinShellAPI.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -70,6 +74,9 @@
   <ItemGroup>
     <EmbeddedResource Include="mainmenu.resx">
       <DependentUpon>mainmenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sourcesPortable.resx">
+      <DependentUpon>sourcesPortable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
